Change signature to offset + length, add sanity test